tests/miniJava/neg/005856_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { new while ( 0 ) { } } }
